Fixes #dev: Code validation changes added

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,12 +2,26 @@
 engines:
   csslint:
     enabled: true
+    checks:
+      order-alphabetical:
+        enabled: false
   eslint:
     enabled: true
   fixme:
     enabled: true
   phpmd:
     enabled: true
+    checks:
+      Controversial/CamelCaseParameterName:
+        enabled: false
+      Controversial/CamelCasePropertyName:
+        enabled: false
+      Naming/LongVariable:
+        enabled: false
+      Naming/ShortVariable:
+        enabled: false
+      order-alphabetical:
+        enabled: false
 ratings:
   paths:
   - "**.css"
