Fixes #dev: code validation undefined variable issue fixes added

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -21,6 +21,8 @@ plugins:
   phpmd:
     enabled: true
     checks:
+      CleanCode/MissingImport:
+        enabled: false
       Controversial/CamelCaseMethodName:
         enabled: false
       Controversial/CamelCaseParameterName:
