--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,6 +14,8 @@ plugins:
         enabled: false
       outline-none:
         enabled: false
+      overqualified-elements:
+        enabled: false
   eslint:
     enabled: true
   fixme:
