Fixes #dev: Code climate validation changes added

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -16,6 +16,8 @@ plugins:
         enabled: false
       duplicate-background-images:
         enabled: false
+      important:
+        enabled: false
       order-alphabetical:
         enabled: false
       outline-none:
