Fixes #dev: Code climate validation changes added

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -64,6 +64,10 @@ plugins:
         enabled: false
       Controversial/Superglobals:
         enabled: false
+      Design/LongMethod:
+        enabled: false
+      Design/NpathComplexity:
+        enabled: false
       Naming/LongVariable:
         enabled: false
       Naming/ShortVariable:
